# llvm-learning

./: README.md
H2BLBCustomBackend/: .clangd  CMakeLists.txt  README.md
H2BLBCustomBackend/MCTargetDesc/: CMakeLists.txt
H2BLBCustomBackend/TargetInfo/: CMakeLists.txt  H2BLBTargetInfo.cpp
IrCreation/: 1-result.ll  3-building_example_ir.cpp  README.md
IrPass/ConstPropagationPass/: ConstantPropagationPass.cpp  PluginRegistery.cpp
IrPass/helloWorldPass/: CMakeLists.txt  test.ll
TableGen/: ArgTest.inc  ArgTest.td  Instr.td  LetScope.td  test.cpp
ir_creation/: 2-init_context.cpp  3-building_example.cpp  4-building_example_mir.cpp  README.md  a.out  example.c  result.ll
ir_pass/ConstPropagationPass/: CMakeLists.txt  ConstantPropagationPass.cpp  ConstantPropagationPass.h  test.ll
ir_pass/helloWorldPass/: HelloWorldPass.cpp  HelloWorldPass.h  PluginRegistery.cpp
